(executable
 (name compiler)
 (libraries base stdio sexp_pretty)
)

(rule
 (target transformed.txt)
 (action
  (with-stdout-to prog.out
   (with-stdin-from prog.in (run compiler.exe)))))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags -la 2))


(env
  (dev
    (flags (:standard -warn-error -A))))
